fix: slider overflow

--- a/src/blocks/slider/slider.css
+++ b/src/blocks/slider/slider.css
@@ -158,8 +158,8 @@
 
   .slider__container {
     position: relative;
-    margin-right: -100px;
-    margin-left: 0;
+    margin-left: -15px;
+    margin-right: -15px;
   }
 
   .slider__slide {
